--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,13 @@ stages:
       env:
         NIGHTVISION_TOKEN: $(NIGHTVISION_TOKEN)
         NIGHTVISION_TARGET: javaspringvulny-api
+  
+      # Install Docker Compose
+    - script: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
+      displayName: 'Install Docker Compose'
 
     - script: |
         docker-compose up -d
