--- a/.github/workflows/nightvision.yml
+++ b/.github/workflows/nightvision.yml
@@ -1,9 +1,9 @@
 ## SETUP
 
 ## Run before activating pipeline
-# nightvision app create -n javaspringvulny-api
-# nightvision target create -n javaspringvulny-api -u https://127.0.0.1:9000 --type api
-# nightvision auth playwright create -n javaspringvulny-api -u https://127.0.0.1:9000
+# nightvision app create javaspringvulny-api
+# nightvision target create javaspringvulny-api https://127.0.0.1:9000 --type api
+# nightvision auth playwright create javaspringvulny-api https://127.0.0.1:9000
 
 ## Optional steps can be preformed locally or in the pipeline
 # nightvision swagger extract ./ -t javaspringvulny-api --lang spring
