--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ image: docker:stable
 # nightvision app create javaspringvulny-api
 # nightvision target create javaspringvulny-api https://localhost:9000 --type api
 # nightvision swagger extract ./ -t javaspringvulny-api --lang spring 
-# nightvision auth playwright create -u https://localhost:9000 -n javaspringvulny-api
+# nightvision auth playwright create javaspringvulny-api https://localhost:9000 
 
 pipelines:
   default:
